docs/deployment-guide/goals/k8s/v12-dtr/nginx/values/keycloak/non-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak-int-sovity.tvsdevops.co.uk
      secretName: myapp-tls-secret
  rules:
    - host: keycloak-int-sovity.tvsdevops.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
